Bug 453969 - Only small amount of emails can be marked as read
Summary: Only small amount of emails can be marked as read
Status: RESOLVED FIXED
Alias: None
Product: kmail2
Classification: Applications
Component: message list (other bugs)
Version First Reported In: 5.16.2
Platform: Fedora RPMs Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2022-05-18 06:54 UTC by dag
Modified: 2022-06-13 12:08 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.21.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description dag 2022-05-18 06:54:27 UTC
SUMMARY
There seems to be a quite low on the number of messages that can be marked as read at one go.

STEPS TO REPRODUCE
1. Select a folder with many unread messages
2. Mark a largeish number (In my case 6000+) of them and select "Mark message as read"
3. 

OBSERVED RESULT
No marks will be changed. No errors reported. The number of unread messages in the folder will not be decreased,
The same happens when selecting "Mark all messages as read" from the folder menu.

EXPECTED RESULT
The selected messages should be marked as read.

SOFTWARE/OS VERSIONS
Windows: 
macOS: 
Linux/KDE Plasma: FC34
(available in About System)
KDE Plasma Version: 5.24.4
KDE Frameworks Version: 5.91.0
Qt Version: 5.15.2 

ADDITIONAL INFORMATION
IMAP folders
Regression/This worked earlier
Comment 1 dag 2022-05-18 07:11:04 UTC
Did some additional testing and the limit for the messages that can be handled in one operation seems to be very close to 1000
Comment 2 Laurent Montel 2022-05-19 05:53:41 UTC
I can confirm it.
I will investigate how to fix it.
Regards
Comment 3 Laurent Montel 2022-06-13 12:08:40 UTC
Git commit 27664025307a2a09265704a3b3c361c0d35d7073 by Laurent Montel.
Committed on 13/06/2022 at 12:08.
Pushed by mlaurent into branch 'master'.

Fix bug 453969 Only small amount of emails can be marked as read
FIXED-IN: 5.21.0

M  +27   -8    src/markascommandhelper.cpp
M  +3    -0    src/markascommandhelper_p.h

https://invent.kde.org/pim/akonadi-mime/commit/27664025307a2a09265704a3b3c361c0d35d7073