Fix bug 453969 Only small amount of emails can be marked as read

BUG:453969
FIXED-IN: 5.21.0